# zm-api

./: .env  .env.example  .gitignore  AGENTS.MD  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  build_clean.rs  deny.toml  docker-compose.test.yml  package-lock.json  package.json  webrtc_test.html  zm_create.sql.in
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: cla.yml  release.yml  test.yml
db/: README.md
docs/: AUDIO_TASKS.md  EVENT_RETENTION_PLAN.md  FILTERS_PLAN.md  HEVC_WEBRTC_TASKS.md  MONITOR_EVENTS_TASKS.md  MOTION_SYNOPSIS_API_SPEC.md  NL_EVENT_SEARCH_PLAN.md  ONVIF_TASKS.md  PTZ_TASKS.md  README.md  REVIEW_FIXES_PLAN.md  RTSP_STREAMING_PLAN.md  STORAGE_PLAN.md  ZMNEXT_PROVISIONING_PLAN.md  ZMNEXT_SHARED_INFERENCE_PLAN.md  ZMNEXT_TASKS.md  deployment.md  tls.md
docs/archive/: RTSP_STREAMING_PLAN.md
packaging/: install.sh  setup-instance.sh  zm_api-takeover.sh
packaging/arch/: PKGBUILD  zm_api.install
packaging/debian/: postinst  postrm  prerm
packaging/rpm/: zm_api.spec
packaging/systemd/: zm_api.env  zm_api.service
prisma/: schema.prisma
scripts/: db-manager.sh  generate-jwt-keys.sh  package.sh  setup-ci-db.sh
settings/: base.toml  prod.toml  test-db.toml
src/: app.module.ts  enum_traits.rs  graphql.ts  lib.rs  main.rs  mse_client.rs  mse_ffi.rs  mse_socket_client.rs  webrtc_ffi.rs  webrtc_signaling.rs  zm_shm.rs
src/client/: database.rs  email.rs  go2rtc.rs  http.rs  mod.rs  webrtc_signaling.rs
src/config/: config.graphql  config.module.ts  config.resolver.ts  config.service.ts
src/configure/: daemon.rs  db.rs  mod.rs  retention.rs  search.rs  secret.rs  sentry.rs  server.rs  streaming.rs  synopsis.rs  template.rs  tracing.rs  worker.rs  zmconf.rs  zmnext.rs
src/constant/: mod.rs
src/controlpresets/: controlpresets.graphql  controlpresets.module.ts  controlpresets.resolver.spec.ts  controlpresets.resolver.ts  controlpresets.service.spec.ts  controlpresets.service.ts
src/controls/: controls.graphql  controls.module.ts  controls.resolver.spec.ts  controls.resolver.ts  controls.service.ts
src/daemon/: backoff.rs  commands.rs  config.rs  daemons.rs  manager.rs  mod.rs  onvif_event_listener.rs  process.rs  stats.rs
src/devices/: devices.graphql  devices.module.ts  devices.resolver.ts  devices.service.ts
src/dto/: dummy_impl.rs  mod.rs  pagination.rs  wrappers.rs
src/entity/: app_entity_impl.rs  config.rs  control_presets.rs  controls.rs  devices.rs  event_data.rs  event_summaries.rs  event_synopsis.rs  events.rs  events_archived.rs  events_day.rs  events_hour.rs  events_month.rs  events_tags.rs  events_week.rs  filters.rs  frames.rs  groups.rs  groups_monitors.rs  groups_permissions.rs  logs.rs  manufacturers.rs  mod.rs  models.rs  monitor_pipeline.rs  monitor_presets.rs  monitor_status.rs  monitors.rs  monitors_permissions.rs  montage_layouts.rs  object_types.rs  prelude.rs  reports.rs  sea_orm_active_enums.rs  server_stats.rs  servers.rs  sessions.rs  snapshots.rs  snapshots_events.rs  states.rs  (+8 more)
src/error/: mod.rs
src/events/: events.module.ts  events.resolver.ts  events.service.ts
src/eventsummaries/: eventsummaries.graphql  eventsummaries.module.ts  eventsummaries.resolver.spec.ts  eventsummaries.resolver.ts  eventsummaries.service.spec.ts  eventsummaries.service.ts
src/filters/: filters.graphql  filters.module.ts  filters.resolver.ts  filters.service.ts
src/frames/: frames.graphql  frames.module.ts  frames.resolver.spec.ts  frames.resolver.ts  frames.service.ts
src/groups/: groups.module.ts  groups.resolver.ts  groups.service.ts
src/handlers/: auth.rs  configs.rs  control_presets.rs  controls.rs  daemon.rs  devices.rs  discovery.rs  event_data.rs  event_summaries.rs  events.rs  events_playback.rs  events_tags.rs  filters.rs  frames.rs  go2rtc_proxy.rs  groups.rs  groups_monitors.rs  groups_permissions.rs  hls.rs  live.rs  logs.rs  manufacturers.rs  mod.rs  models.rs  monitor.rs  monitor_pipeline.rs  monitor_presets.rs  monitor_status.rs  monitors_permissions.rs  montage_layouts.rs  mse.rs  object_types.rs  openapi.rs  ptz.rs  reports.rs  search.rs  server.rs  server_stats.rs  servers.rs  sessions.rs  (+16 more)
src/homekit/: accessory.rs  config.rs  crypto.rs  http.rs  mdns.rs  mod.rs  session.rs  tlv8.rs
src/manufacturers/: manufacturers.graphql  manufacturers.module.ts  manufacturers.resolver.ts  manufacturers.service.ts
src/migration/: m20220101_000001_create_role_type.rs  m20220101_000002_create_user_table.rs  m20220101_000003_create_message_table.rs  m20260625_000001_create_event_synopsis.rs  m20260627_000001_create_monitor_pipeline.rs  mod.rs
src/models/: models.graphql  models.module.ts  models.resolver.ts  models.service.ts
src/monitorpresets/: monitorpresets.graphql  monitorpresets.module.ts  monitorpresets.resolver.spec.ts  monitorpresets.resolver.ts  monitorpresets.service.spec.ts  monitorpresets.service.ts
src/monitors/: monitors.graphql  monitors.module.ts  monitors.resolver.spec.ts  monitors.resolver.ts  monitors.service.ts
src/monitorstatus/: monitorstatus.graphql  monitorstatus.module.ts  monitorstatus.resolver.spec.ts  monitorstatus.resolver.ts  (+2 more)
tests/: auth_failure.rs  handlers_auth_integration.rs  handlers_devices.rs  handlers_devices_integration.rs  handlers_filters.rs  handlers_filters_zones_snapshots_streaming_integration.rs  handlers_meta_integration.rs  handlers_monitors_events_frames_integration.rs  handlers_server.rs  handlers_server_stats_integration.rs  handlers_users_groups_permissions_sessions_integration.rs  harness_smoke.rs  it_configs.rs  it_control_presets.rs  it_controls.rs  it_devices.rs  it_event_data.rs  it_event_summaries.rs  it_events_playback.rs  it_events_tags.rs  it_filters_ast.rs  it_group_acl.rs  it_groups_monitors.rs  it_live.rs  it_logs.rs  it_manufacturers.rs  it_models.rs  it_monitor_acl.rs  it_monitor_presets.rs  it_monitor_status.rs  it_monitors_permissions.rs  it_montage_layouts.rs  it_object_types.rs  it_ptz.rs  it_reports.rs  it_search.rs  it_servers.rs  it_snapshots_events.rs  it_states.rs  it_stats.rs  (+10 more)
(+1914 files in other folders)
