[package]
name = "zm_api"
version = "3.0.0"
edition = "2021"

# Features
[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-acme = { version = "0.14.1", features = ["axum", "tokio", "tower"] }
base64 = "0.22"
bcrypt = "0.17"
chrono = "0.4"
config = "0.15"
dotenvy = "0.15"
fake = { version = "4", features = ["derive", "uuid", "chrono"] }
futures = "0.3"
futures-util = "0.3"
garde = { version = "0.22", features = ["full"] }
itertools = "0.14"
jsonwebtoken = "9"
lazy_static = "1"
log = "0.4"
memmap2 = "0.9"
openssl = "0.10"
once_cell = "1"
rand = "0.9"
rand_core = { version = "0.9", features = ["std"] }
regex = "1"
reqwest = "0.12"
rust_decimal = "1"
test-context = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
sentry = "0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
url = "2"
urlencoding = "2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
libloading = "0.8"
mockall = "0.13"

# WebRTC native implementation
webrtc = "0.12"
webrtc-util = "0.9"
interceptor = "0.13"

# RTSP client for stream sources
retina = "0.4"

# Media parsing
bytes = "1"

# Dashboard/stats
dashmap = "6"

# Unix signal handling
nix = { version = "0.29", features = ["signal"] }

[dependencies.sea-orm]
version = "1"
features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "mock"]

[dependencies.sea-orm-migration]
version = "1"
features = ["runtime-tokio-rustls", "sqlx-postgres","sqlx-mysql"]

[dependencies.sqlx]
version = "0.8.6"
features = ["mysql", "postgres"]

[build-dependencies]
pkg-config = "0.3"

# Link to the MSE plugin library
# Note: You'll need to build the MSE plugin library first
# and ensure it's in your library path or specify the path

[dev-dependencies]
# HTTP server testing helpers for Axum
axum-test = { version = "18", features = ["typed-routing"] }
# Parameterized tests
rstest = "0.26"
# Snapshot testing for JSON/OpenAPI
insta = { version = "1", features = ["json"] }
# JSON diffing in assertions (crate name uses hyphens)
assert-json-diff = "2"
# Mocking traits in unit tests
mockall = "0.13"
tower = "0.5"
# Temporary directories for tests
tempfile = "3"

[package.metadata.deb]
maintainer = "zm_api <admin@localhost>"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
  ["target/release/zm_api", "usr/bin/zm_api", "755"],
  ["settings/base.toml", "etc/zm_api/base.toml", "644"],
  ["settings/prod.toml", "etc/zm_api/prod.toml", "644"],
  ["packaging/systemd/zm_api.env", "etc/zm_api/zm_api.env", "644"],
  ["packaging/systemd/zm_api.service", "lib/systemd/system/zm_api.service", "644"],
  ["static", "usr/share/zm_api/static", "755"],
]
conf-files = [
  "/etc/zm_api/base.toml",
  "/etc/zm_api/prod.toml",
  "/etc/zm_api/zm_api.env",
]

[package.metadata.rpm]
package = "zm_api"
license = "UNLICENSED"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
zm_api = { path = "/usr/bin/zm_api" }

[package.metadata.rpm.files]
"settings/base.toml" = { path = "/etc/zm_api/base.toml", mode = "644", config = true }
"settings/prod.toml" = { path = "/etc/zm_api/prod.toml", mode = "644", config = true }
"packaging/systemd/zm_api.env" = { path = "/etc/zm_api/zm_api.env", mode = "644", config = true }
"packaging/systemd/zm_api.service" = { path = "/usr/lib/systemd/system/zm_api.service", mode = "644" }
"static" = { path = "/usr/share/zm_api/static", mode = "755" }
