[package]
name = "zm_api"
# Pre-release: first Rust version, carrying the v3 lineage from ZoneMinder's API
# history. cargo-deb maps the `-alpha.1` suffix to a Debian `~alpha.1` so it
# sorts before the eventual 3.0.0. See packaging/rpm/zm_api.spec and
# packaging/arch/PKGBUILD for the rpm/Arch equivalents, and docs/deployment.md.
version = "3.0.0-alpha.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A modern REST API for ZoneMinder"
repository = "https://github.com/SteveGilvarry/zm-api"
# The crate ships two binaries (the server `zm_api` and the `fixture-doctor`
# maintenance tool), so plain `cargo run` is ambiguous without this — keep it
# defaulting to the server.
default-run = "zm_api"

# Features
[features]
default = ["onvif"]

# ONVIF client capabilities, gated per ONVIF Device Test Specification category
# (see docs/ONVIF_TASKS.md). `onvif-core` is the always-required SOAP transport
# + WS-Security foundation; every other onvif-* feature pulls it in.
onvif-core = []
onvif-device = ["onvif-core"]
onvif-media = ["onvif-core"]
onvif-ptz = ["onvif-core"]
onvif-events = ["onvif-core"]
# The discovery *service* layer queries Device + Media to inspect a candidate,
# so the feature composes them.
onvif-discovery = ["onvif-core", "onvif-device", "onvif-media"]

# ONVIF profile umbrellas (the capability set a deployment targets). media2,
# imaging, recording/replay and analytics are not yet implemented, so the T/G/M
# umbrellas currently map to the implemented subset.
onvif-profile-s = ["onvif-device", "onvif-media", "onvif-ptz", "onvif-events", "onvif-discovery"]
onvif-profile-t = ["onvif-profile-s"]
onvif-profile-g = ["onvif-device"]
onvif-profile-m = ["onvif-device", "onvif-events"]

# Convenience: everything currently implemented (the default).
onvif = ["onvif-profile-s"]

# Maintenance tool: scan for and clean up leaked `Test_run_*` integration-test
# fixture rows. See src/bin/fixture_doctor.rs.
[[bin]]
name = "fixture-doctor"
path = "src/bin/fixture_doctor.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-acme = { version = "0.15", features = ["axum", "tokio", "tower"] }
base64 = "0.22"
bcrypt = "0.19"
chrono = "0.4"
config = "0.15"
dotenvy = "0.15"
fake = { version = "5", features = ["derive", "uuid", "chrono"] }
futures = "0.3"
futures-util = "0.3"
garde = { version = "0.22", features = ["full"] }
itertools = "0.14"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
log = "0.4"
memmap2 = "0.9"
openssl = "0.10"
once_cell = "1"
rand = "0.9"
rand_core = { version = "0.9", features = ["std"] }
regex = "1"
reqwest = "0.13"
rust_decimal = "1"
test-context = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.29"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
sentry = "0.48"
# ONVIF SOAP client: XML envelope build/parse and WS-Security SHA-1 digest.
quick-xml = "0.37"
sha1 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
url = "2"
urlencoding = "2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "fs",
    "compression-gzip",
    "compression-br",
    "set-header",
] }
tower_governor = "0.8"
mockall = "0.14"

# WebRTC native implementation
webrtc = "0.17"
webrtc-util = "0.17"
interceptor = "0.17"
webrtc-media = "0.17"

# RTSP client for stream sources
retina = "0.4"

# Media parsing
bytes = "1"

# Dashboard/stats
dashmap = "6"

# FFmpeg bindings for H.264 → JPEG snapshot decoding
ffmpeg-next = "8"

# Unix signal handling and filesystem utilities
nix = { version = "0.31", features = ["signal", "fs"] }

# Low-level libc bindings for PR_SET_PDEATHSIG
libc = "0.2"

[dependencies.sea-orm]
version = "1"
features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "mock"]

[dependencies.sea-orm-migration]
version = "1"
features = ["runtime-tokio-rustls", "sqlx-postgres","sqlx-mysql"]

[dependencies.sqlx]
version = "0.8.6"
features = ["mysql", "postgres"]

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
# HTTP server testing helpers for Axum
axum-test = { version = "20", features = ["typed-routing"] }
# Parameterized tests
rstest = "0.26"
# Snapshot testing for JSON/OpenAPI
insta = { version = "1", features = ["json"] }
# JSON diffing in assertions (crate name uses hyphens)
assert-json-diff = "2"
# Mocking traits in unit tests
mockall = "0.14"
tower = "0.5"
# Temporary directories for tests
tempfile = "3"

# jemalloc as the process-wide allocator. The server is a long-running,
# allocation-bursty media workload; glibc malloc retains freed buffers in its
# arenas rather than returning them to the OS, so RSS sits at its high-water
# mark. jemalloc returns pages aggressively, keeping RSS near the live set.
# Gated off MSVC, where jemalloc is unavailable. Wired up in src/lib.rs.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

# Query jemalloc's runtime stats to assert the global allocator is wired up
# (see tests/jemalloc.rs).
[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[package.metadata.deb]
maintainer = "Steve Gilvarry <SteveGilvarry@users.noreply.github.com>"
# openssl: JWT key generation in the post-install script. passwd: useradd/usermod.
depends = "$auto, openssl, passwd"
section = "net"
priority = "optional"
maintainer-scripts = "packaging/debian"
assets = [
  ["target/release/zm_api", "usr/bin/zm_api", "755"],
  ["packaging/zm_api-takeover.sh", "usr/bin/zm_api-takeover", "755"],
  ["packaging/setup-instance.sh", "usr/share/zm_api/setup-instance.sh", "755"],
  ["settings/base.toml", "etc/zm_api/base.toml", "644"],
  ["settings/prod.toml", "etc/zm_api/prod.toml", "644"],
  ["packaging/systemd/zm_api.env", "etc/zm_api/zm_api.env", "644"],
  ["packaging/systemd/zm_api.service", "lib/systemd/system/zm_api.service", "644"],
  # NOTE: do not ship `static/` wholesale — it holds the dev JWT keys
  # (static/key/*.pem). Packaged installs generate their own keys in
  # /var/lib/zm_api/keys. If real web assets are added later, ship a scoped
  # glob such as ["static/images/**/*", "usr/share/zm_api/static/images/", "644"].
]
conf-files = [
  "/etc/zm_api/base.toml",
  "/etc/zm_api/prod.toml",
  "/etc/zm_api/zm_api.env",
]

[package.metadata.rpm]
package = "zm-api"
license = "AGPL-3.0-or-later"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
zm_api = { path = "/usr/bin/zm_api" }

[package.metadata.rpm.files]
"settings/base.toml" = { path = "/etc/zm_api/base.toml", mode = "644", config = true }
"settings/prod.toml" = { path = "/etc/zm_api/prod.toml", mode = "644", config = true }
"packaging/systemd/zm_api.env" = { path = "/etc/zm_api/zm_api.env", mode = "644", config = true }
"packaging/systemd/zm_api.service" = { path = "/usr/lib/systemd/system/zm_api.service", mode = "644" }
"packaging/zm_api-takeover.sh" = { path = "/usr/bin/zm_api-takeover", mode = "755" }
"packaging/setup-instance.sh" = { path = "/usr/share/zm_api/setup-instance.sh", mode = "755" }
# `static/` is intentionally NOT shipped — it holds dev JWT keys; packaged
# installs generate their own in /var/lib/zm_api/keys.

# Full DWARF debug info triples the linker's peak memory and pushes this dev
# box (16 GiB / 4 GiB swap, with ZoneMinder + zm_api already resident) into
# systemd-oomd's kill range — `cargo test` was reliably killing the tmux
# scope. Line tables alone still give file/line numbers in panics and
# backtraces; the variable/type info dropped here is rarely used outside an
# attached debugger.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
